[gd_scene load_steps=2 format=3 uid="uid://c8kqfxw5gvwqj"]

[ext_resource type="Script" path="res://scripts/ui/audio_settings_panel.gd" id="1_audio"]

[node name="AudioSettingsPanel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 100
mouse_filter = 0
script = ExtResource("1_audio")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Èü≥È¢ëËÆæÁΩÆ"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "‰∏ªÈü≥Èáè"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.8

[node name="MasterMuteButton" type="Button" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
toggle_mode = true
text = "üîä"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Èü≥‰πêÈü≥Èáè"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.8

[node name="MusicMuteButton" type="Button" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
toggle_mode = true
text = "üîä"

[node name="SfxVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SfxVolumeLabel" type="Label" parent="VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Èü≥ÊïàÈü≥Èáè"

[node name="SfxVolumeSlider" type="HSlider" parent="VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.8

[node name="SfxMuteButton" type="Button" parent="VBoxContainer/SfxVolumeContainer"]
layout_mode = 2
toggle_mode = true
text = "üîä"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TestSoundButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ÊµãËØïÈü≥Êïà"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ÂÖ≥Èó≠"
